# api/routes/playlists.js
@@ -1,9 +1,11 @@
 const playlistRouter = require('express').Router();
 const playlists = require("../controllers/playlists.controller");
 
+playlistRouter.get('/snapshot/:id', playlists.retrieveSnapshot);
 playlistRouter.get('/search', playlists.search);
 playlistRouter.get('/:id', playlists.getPlaylist);
 playlistRouter.get('/:id/metadata', playlists.getPlaylistMetadata);
+playlistRouter.post('/:id/share', playlists.share);
 playlistRouter.get('/', playlists.getPlaylists);
 
 module.exports = playlistRouter;
